doc: fix